Fixed clickable X button on modals that were covered by header

--- a/src/app/components/modal/_index.scss
+++ b/src/app/components/modal/_index.scss
@@ -39,3 +39,12 @@
     transition-duration: .4s;
   }
 }
+
+
+.modal {
+  z-index: 99999;
+
+  @media screen and (min-width: $bp-large) {
+    z-index: 50;
+  }
+}
